--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,15 +30,24 @@ services:
       - MONGODB_INITIAL_PRIMARY_HOST=mongodb-primary
       - MONGODB_INITIAL_PRIMARY_ROOT_PASSWORD=password
       - MONGODB_REPLICA_SET_KEY=replicasetkey
-
-  ems:
-    image: jfrog-mirai.asml.com/mirai-docker/mirai-ems:1.4.0
-    container_name: ems
-    command:
-      - tibemsd
-    ports:
-      - "7222:7222"
   redis:
     image: redis:latest
     ports:
       - "6379:6379"
+  postgres:
+    image: postgres:latest
+    ports:
+      - "5434:5432"
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=scep
+  ems:
+    image: ems:1.0.0
+    ports:
+      - "7222:7222"
+    environment:
+      - EMS_CONFIG=/opt/tibco/ems/docker/tibemsd-configbase.json
+    
+      
+      
+      
